@@ -84,8 +84,17 @@ class Order extends Application {
         $this->data['title'] = 'Checking Out';
         $this->data['pagebody'] = 'show_order';
         $this->data['order_num'] = $order_num;
-        //FIXME
+        
+        $this->data['total']=  number_format($this->orders->total($order_num),2);
 
+        $items=$this->orderitems->group($order_num);
+        foreach ($items as $item)
+        {
+            $menuitem = $this->menu->get($item->item);
+            $item->code = $menuitem->name;
+        }
+        $this->data['okornot'] = $this->orders->validate($item->code) ? "": "disabled";
+        $this->data['items'] = $items;
         $this->render();
     }
 
