@@ -58,7 +58,17 @@ class Orders extends MY_Model {
     // validate an order
     // it must have at least one item from each category
     function validate($num) {
-        return false;
+        $CI = & get_instance();
+        $items = $CI->orderitems->group($num);
+        $gotten = array();
+        if(count($items)> 0)
+            foreach ($items as $item)
+            {
+                $menu = $CI->menu->get($item->item);
+                $gotten[$menu->category] = 1;
+            }
+            
+        return isset($gotten['m']) && isset($gotten['d']) && isset($gotten['s']);
     }
 
 }
